# CyclicTask

./: CHANGELOG.md  README.md  pyproject.toml
CyclicTask/: ContinuousTask.py  CycleTimeError.py  TimedTask.py  __init__.py
test/ContinuousTaskTests/: errorConditions.py  normalConditions.py  warningConditions.py
test/TimedTaskTests/: errorConditions.py  normalConditions.py  warningConditions.py
